* [ItemDetails] Fixed align of inline field

--- a/src/view/Components/ItemDetails/style.scss
+++ b/src/view/Components/ItemDetails/style.scss
@@ -13,6 +13,7 @@
 
   .inline-field {
     flex-flow: row wrap;
+    align-items: baseline;
     column-gap: 2rem;
   }
 
